test/Fail/IApplyConfluence.err
IApplyConfluence.agda:18.1-20: error: [UnequalTerms]
true != false of type Bool
when checking the definition of decideEq
